--- a/Application/config/database.yml
+++ b/Application/config/database.yml
@@ -11,9 +11,9 @@ development:
   reconnect: false
   database: TTMS_development
   pool: 5
-  username: root
-  password:
-  socket: /opt/local/var/run/mysql5/mysqld.sock
+  username: ttms
+  password: ttmspassword
+  host: db
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -26,7 +26,6 @@ test:
   pool: 5
   username: root
   password:
-  socket: /opt/local/var/run/mysql5/mysqld.sock
 
 production:
   adapter: mysql2
@@ -36,4 +35,3 @@ production:
   pool: 5
   username: root
   password:
-  socket: /opt/local/var/run/mysql5/mysqld.sock
